Fix <div> card-counter to stretch automatically depending on the number length

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -88,8 +88,9 @@ header {
         }
 
         .cart-counter {
-          width: 50px;
+          max-width: 60px;
           height: 27px;
+          padding: 0 3px;          
           border-radius: 14px;
           background-color: $header-bg;
           display: flex;
